--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cru</groupId>
   <artifactId>jersey-bundle</artifactId>
+  <name>Jersey Bundle</name>
   <packaging>pom</packaging>
-  <version>1.2.1</version>
+  <version>3.0.0-SNAPSHOT</version>
   <description>jersey-bundle</description>
 
   <modules>
