--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.cru</groupId>
         <artifactId>jersey-bundle</artifactId>
-        <version>1.2.1</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jersey-bundle.core</artifactId>
