--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <groupId>org.cru</groupId>
   <artifactId>jersey-bundle</artifactId>
   <packaging>pom</packaging>
-  <version>1.2.1</version>
+  <version>3.0.0-SNAPSHOT</version>
   <description>jersey-bundle</description>
 
   <modules>
