--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.cru</groupId>
     <artifactId>jersey-bundle</artifactId>
-    <version>1.2.1</version>
+    <version>3.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
